Moved moment-range to its own legitimately-forked repo.

--- a/demos/default.html
+++ b/demos/default.html
@@ -82,6 +82,7 @@
 		</div>
 	</div>
 	<script src='../lib/moment/moment.js'></script>
+	<script src='../lib/moment-range/lib/moment-range.js'></script>
 	<script src='../lib/jquery/jquery.js'></script>
 	<script src='../lib/jquery-ui/ui/jquery-ui.js'></script>
 	<script src='../build/out/html5calendar.js'></script>
