--- a/demos/default.html
+++ b/demos/default.html
@@ -24,8 +24,8 @@
 	}
 
 	.demoCalendar .ht5c-inner.month {
-		font-size:128px;
-		line-height:128px;
+		font-size:100px;
+		line-height:100px;
 	}
 
 	section.panel {
@@ -40,12 +40,12 @@
 	<div id="calendar">
 		<div class="demoCalendar"
 			 data-calendar="html5" 
-			 data-calendar-type="agenda" 
-			 data-calendar-dayBegin="00:00:00" 
-			 data-calendar-dayEnd="24:00:00"
-			 data-calendar-currentDate="5/21/2014">
-			<h3 data-calender-receive="currentDate"></h3>
-			<button data-calendar-action="prev">&lt;&lt;</button><button data-calendar-action="next">&gt;&gt;</button><button data-calendar-option="type" data-calendar-optionValue="agenda">Agenda</button><button data-calendar-option="type" data-calendar-optionValue="month">Month</button>
+			 data-calendar-defaultDate="5/21/2014">
+			<h3 data-calender-receive="defaultDate"></h3>
+			<button data-calendar-action="prev">&lt;&lt;</button>
+			<button data-calendar-action="next">&gt;&gt;</button>
+			<button data-calendar-option="view" data-calendar-optionValue="agenda">Agenda</button>
+			<button data-calendar-option="view" data-calendar-optionValue="month">Month</button>
 			<ul data-calendar-events>
 				<li data-calendar-event-start="2014-04-29 09:00:00"
 					data-calendar-event-end="2014-04-29 10:00:00"
