--- a/demos/index.html
+++ b/demos/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='utf-8' />
-<link href='../build/out/html5calendar.css' rel='stylesheet' />
+<link href='../html5calendar/html5calendar.css' rel='stylesheet' />
 <style>
 
 	body {
@@ -68,10 +68,10 @@
 			</ul>
 		</div>
 	</div>
-	<script src='../lib/moment/moment.js'></script>
-	<script src='../lib/moment-range/lib/moment-range.js'></script>
-	<script src='../lib/jquery/jquery.js'></script>
-	<script src='../lib/jquery-ui/ui/jquery-ui.js'></script>
-	<script src='../build/out/html5calendar.js'></script>
+	<script src='../lib/moment.min.js'></script>
+	<script src='../lib/moment-range.js'></script>
+	<script src='../lib/jquery.min.js'></script>
+	<script src='../lib/jquery-ui.custom.min.js'></script>
+	<script src='../html5calendar/html5calendar.min.js'></script>
 </body>
 </html>
