--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/scottpledger/html5calendar">View on GitHub</a>
 
           <h1 id="project_title">Html5calendar</h1>
-          <h2 id="project_tagline">An HTML5 calendar jQuery plugin.</h2>
+          <h2 id="project_tagline">An HTML5 Calendar plugin for jQuery.</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/scottpledger/html5calendar/zipball/master">Download this project as a .zip file</a>
@@ -34,7 +34,9 @@
         <h1>
 <a name="html5calendar---full-sized-drag--drop-event-calendar" class="anchor" href="#html5calendar---full-sized-drag--drop-event-calendar"><span class="octicon octicon-link"></span></a>HTML5Calendar - Full-sized drag &amp; drop event calendar</h1>
 
-<p>This document describes how to modify or contribute to the HTML5Calendar project. If you are looking for end-developer documentation, please visit the <a href="https://github.com/scottpledger/html5calendar">project homepage</a>.</p>
+<p>This document describes how to modify or contribute to the HTML5Calendar project.</p>
+
+<p>You can find developer documentation <a href="http://scottpledger.github.io/html5calendar/docs/readme.html">here</a> and you can view some demos <a href="http://scottpledger.github.io/html5calendar/demos/">here</a>.</p>
 
 <h2>
 <a name="getting-set-up" class="anchor" href="#getting-set-up"><span class="octicon octicon-link"></span></a>Getting Set Up</h2>
