--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
 
 <p>This document describes how to modify or contribute to the HTML5Calendar project.</p>
 
-<p>You can find developer documentation <a href="http://scottpledger.github.io/html5calendar/docs/readme.html">here</a> and you can view some demos <a href="http://scottpledger.github.io/html5calendar/demos/">here</a>.</p>
+<h2>
+<a name="quick-links" class="anchor" href="#quick-links"><span class="octicon octicon-link"></span></a>Quick Links</h2>
+<p>
+  <ul>
+    <li><a href="http://scottpledger.github.io/html5calendar/docs/readme.html">Developer documentation</a></li>
+    <li><a href="http://scottpledger.github.io/html5calendar/demos/">Demos</a></li>
+  </ul>
+</p>
 
 <h2>
 <a name="getting-set-up" class="anchor" href="#getting-set-up"><span class="octicon octicon-link"></span></a>Getting Set Up</h2>
