--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <a name="quick-links" class="anchor" href="#quick-links"><span class="octicon octicon-link"></span></a>Quick Links</h2>
 <p>
   <ul>
-    <li><a href="http://scottpledger.github.io/html5calendar/docs/readme.html">Developer documentation</a></li>
+    <li><a href="http://scottpledger.github.io/html5calendar/docs/">Documentation</a></li>
     <li><a href="http://scottpledger.github.io/html5calendar/demos/">Demos</a></li>
   </ul>
 </p>
